crates/plotnik-tests/tests/03-analyze/alternations/mixed_nested_in_node.txt
Q = (call
  [
    A: (a)
    (b)
  ]
)
------------------ DIAGNOSTICS -------------------
error: cannot mix enum and union branches
 --> query.ptk:4:5
  |
3 |     A: (a)
  |     - labeled alternative here
4 |     (b)
  |     ^^^
  |
help: use all labels for an enum, or none for a merged struct
-------------------- SYMBOLS ---------------------
